Created calculator styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 </head>
 
 <body>
+    <div class="flex-container">
+        <div class="grid-container">
+            <label class="grid-item">420.69</label>    
+            <button class="grid-item plus">+</button>
+            <button class="grid-item subtract">-</button>
+            <button class="grid-item multiply">*</button>
+            <button class="grid-item divide">/</button>
+            <button class="grid-item num-7">7</button>
+            <button class="grid-item num-8">8</button>
+            <button class="grid-item num-9">9</button>
+            <button class="grid-item equals">=</button>
+            <button class="grid-item num-4">4</button>
+            <button class="grid-item num-5">5</button>
+            <button class="grid-item num-6">6</button>
+            <button class="grid-item num-1">1</button>
+            <button class="grid-item num-2">2</button>
+            <button class="grid-item num-3">3</button>
+            <button class="grid-item num-0">0</button>
+            <button class="grid-item decimal">.</button>
+            <button class="grid-item clear">AC</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
