--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 <body>
     <div class="flex-container">
         <div class="grid-container">
-            <label class="grid-item">420.69</label>    
-            <button class="grid-item plus white-bord">+</button>
-            <button class="grid-item subtract white-bord">-</button>
-            <button class="grid-item multiply white-bord">*</button>
-            <button class="grid-item divide white-bord">/</button>
-            <button class="grid-item num-7 white-bord">7</button>
-            <button class="grid-item num-8 white-bord">8</button>
-            <button class="grid-item num-9 white-bord">9</button>
-            <button class="grid-item equals orange-bord">=</button>
-            <button class="grid-item num-4 white-bord">4</button>
-            <button class="grid-item num-5 white-bord">5</button>
-            <button class="grid-item num-6 white-bord">6</button>
-            <button class="grid-item num-1 white-bord">1</button>
-            <button class="grid-item num-2 white-bord">2</button>
-            <button class="grid-item num-3 white-bord">3</button>
-            <button class="grid-item num-0 white-bord">0</button>
-            <button class="grid-item decimal white-bord">.</button>
-            <button class="grid-item clear white-bord">AC</button>
+            <label class="grid-item">0</label>    
+            <button class="grid-item plus">+</button>
+            <button class="grid-item subtract">-</button>
+            <button class="grid-item multiply">*</button>
+            <button class="grid-item divide">/</button>
+            <button class="grid-item del">del</button>
+            <button class="grid-item num-7">7</button>
+            <button class="grid-item num-8">8</button>
+            <button class="grid-item num-9">9</button>
+            <button class="grid-item equals">=</button>
+            <button class="grid-item num-4">4</button>
+            <button class="grid-item num-5">5</button>
+            <button class="grid-item num-6">6</button>
+            <button class="grid-item num-1">1</button>
+            <button class="grid-item num-2">2</button>
+            <button class="grid-item num-3">3</button>
+            <button class="grid-item num-0">0</button>
+            <button class="grid-item decimal">.</button>
+            <button class="grid-item clear">AC</button>
         </div>
     </div>
 
