--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="style.css" type="text/css" rel="stylesheet">
+    <script defer src="script.js"></script>
+
     <title>Calculator</title>
 </head>
 
@@ -32,7 +35,5 @@
             <button class="grid-item">AC</button>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
